samples/_failures_safe/1761472739_991604_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1605ecde.c: In function ‘main’:
./samples/SAFE/__tmp_1605ecde.c:190:16: error: expected ‘)’ at end of input
  190 |     if (len > 0
      |        ~       ^
      |                )
./samples/SAFE/__tmp_1605ecde.c:190:5: error: expected declaration or statement at end of input
  190 |     if (len > 0
      |     ^~
